# HGPExamWorkFlowAndChat

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  FEATURES.md  FUNDING.md  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.yml  install.md  pyproject.toml  requirements-docker-constraints.txt  run.md  setup.py
.github/: FUNDING.yml  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: ci.yml  release-container.yml
backend/: ocsp_signer.py  training_job.py  training_scheduler.py
backend/app/: api.py  bootstrap.py  chat.py  config.py  database.py  db_cli.py  main.py  models.py  retention.py  schemas.py  security.py
clients/: rest_client.py  rpc_http_client.py
clients/native/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
clients/native/src-tauri/src/: main.rs
docs/: client-app-builds.md  trust-validation-contract.md  workflows.md
frontend/: admin.html  admin.js  app.js  client-config.js  index.html  manifest.webmanifest  styles.css  sw.js
hcp_xml_workflow_chat.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
hgp_exam_work_flow_and_chat.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
infra/: Caddyfile  init.sql  ocsp-config.example.json
ml/: __init__.py  train_bert.py  train_lstm.py  train_reranker.py
tests/: test_api_contract.py  test_asag_metrics.py  test_chatbot_workflow_report.py  test_configuration_cache.py  test_database_metadata.py  test_effectiveness_reports.py  test_envelope_encryption.py  test_evidence.py  test_exam_json.py  test_group_exam_features.py  test_indexing.py  test_ingestion_and_training.py  test_integrity_rights_and_scales.py  test_native_client_build.py  test_performance.py  test_research_history.py  test_rest_client_contract.py  test_rpc_http_client_contract.py  test_sample_data.py  test_search_bm25_and_vocab.py  test_search_ranking.py  test_security_tokens.py  test_thesaurus.py  test_totp_security.py  test_user_and_exam_masks.py  test_workflow_policies.py
tools/: build_client_bundle.py  create_private_pki.sh  db_create.py  generate_certificate_request.py  run_test_reports.py  youtube_to_csv.py
(+95 files in other folders)
