[package]
name = "hgp-exam-work-flow-and-chat-client"
version = "0.1.0"
description = "Windows desktop client for HGPExamWorkFlowAndChat"
authors = ["Harald Glab-Plhak"]
license = "MIT"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = ["shell-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
custom-protocol = ["tauri/custom-protocol"]
